--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,10 @@ img{
 .button{
     color: #ffffff;
     font-family: "PT Sans";
+    font-weight: 700;
     text-transform: uppercase;
+    border:none;
+    box-shadow: none;
 }
 a {
     text-decoration: none;
@@ -88,7 +91,7 @@ a {
     width: 138px;
     height: 70px;
 }
-/*--------------------------------MAIN-------------------*/
+/*--------------------------------MAIN - PAGE 1-------------------*/
 .container{
     margin:0;
     padding:0;
@@ -111,7 +114,7 @@ a {
 .greeting-mask{
   position:absolute;
   width:100%;
-  bottom:8px;
+  bottom:7px;
   left:0;
 }
 .features{
@@ -146,6 +149,757 @@ a {
 
     list-style:none;
 }
+.feature-item{
+    flex-grow:1;
+    display:flex;
+}
+.feature-item h2{
+    margin:0 auto;
+    margin-bottom:30px;
+    font-size: 21px;
+    font-weight: 700;
+}
+.promo-text{
+    width:400px ;
+
+    padding-top:46px;
+    padding-right:60px;
+    padding-left:60px;
+    padding-bottom:64px;
+    text-align:center;
+    box-sizing:border-box;
+}
+.promo-text span{
+    position:relative;
+}
+.promo-text span::before,
+.promo-text span::after{
+    content:"";
+    position:absolute;
+
+    width:12px;
+    height:2px;
+}
+.promo-text span::before{
+    top:8px;
+    left:-14px;
+}
+.promo-text span::after{
+    top:8px;
+    right:-14px;
+}
+.index-number-grey::before,
+.index-number-grey::after{
+   background-color: #333333;
+}
+.index-number-white::before,
+.index-number-white::after{
+   background-color:#ffffff;
+}
+.feature-item:nth-child(2),
+.feature-item:nth-child(3),
+.feature-item:nth-child(4){
+  padding-top:160px;
+  background-color:transparent;
+}
+.feature-item:nth-child(6),
+.feature-item:nth-child(7),
+.feature-item:nth-child(8){
+  background-color: #f2f2f2;
+}
+.backgruond-blue{ 
+    background-color: #81b3d2;
+    color:white;
+}
+   
+.lodging,
+.food,
+.souvenirs{
+    position:relative;
+}
+.lodging::before,
+.food::before,
+.souvenirs::before{
+    content:"";
+    position:absolute;
+    
+    width: 75px;
+    height: 72px; 
+}
+.lodging::before{
+    margin-right:-36px;
+    top:-102px;
+    right:50%;
+    background-image: url("../img/icon-1.svg");
+    background-repeat: no-repeat;
+  }
+  .food::before{
+    margin-right:-36px;
+    top:-102px;
+    right:50%;
+    background-image: url("../img/icon-2.svg");
+    background-repeat: no-repeat;
+  }
+  .souvenirs::before{
+    margin-right:-36px;
+    top:-102px;
+    right:50%;
+    background-image: url("../img/icon-3.svg");
+    background-repeat: no-repeat;
+  }
+  .search{
+      display:block;
+      width:100%;
+      margin:0;
+      
+      text-align:center;
+      box-sizing: border-box;
+  }
+  .hotel-search{
+    display:block;
+    
+    margin:0;
+    padding:60px;
+    padding-bottom:0;
+  }
+  .button-search{
+   margin-bottom:0;
+    
+    padding:30px 140px;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    text-transform: uppercase;
+    background-color: #766357;
+  }
+  .button-search:hover,
+  .button-search:focus
+  {
+    background-color: #604e43;
+  }
+  .button-search:active{
+    color:#ffffff;
+    opacity:50%;
+
+    background-color: #503e33;
+
+  }
+  .search-slogan{
+    display:block;
+    margin:0;
+    /*margin-bottom:36px;*/  
+    color: #000000;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: uppercase;
+  }
+  .search-text{
+    margin:0;
+    margin-bottom:52px;  
+    padding:0;
+
+  }
+  .pop-up{
+      position: relative;
+  }
+  /*--------------------------------MAIN - PAGE 2-------------------*/
+  .filter-form{
+    padding:31px 72px;
+    display:flex;
+    justify-content: space-between;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    text-transform: uppercase;
+
+    background-image:url("../img/filter-background.jpg");
+    background-repeat: no-repeat;
+    background-size: 1280px auto;
+    background-position:0 -300px;
+    background-color: #766357;
+}
+.fieldset-inf-options,
+  .fieldset-lodging-options{
+  min-width:144px;
+  
+  }
+  .fieldset-lodging-options{
+    margin-left:115px;
+  }
+  legend{
+    margin:0;
+    margin-bottom:28px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    text-transform: uppercase;
+  }
+  .filter-form fieldset{
+    padding: 0;
+    margin: 0;
+    border:none;
+}
+.inf-options-list,
+.lodging-options-list{
+  margin:0;
+  padding:0;
+  list-style:none;
+}
+.fieldset-cost{
+    width: 330px;
+    margin-left:auto;
+}
+.cost-options-title{
+  margin:0;
+  margin-bottom:10px;
+}
+.price-controls{
+  position: relative;
+  height: 32px;
+  border: 2px solid #ffffff;
+  margin-bottom: 20px;
+  font-size: 0;
+}
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 2px;
+  height: 22px;
+
+  background: #ffffff;
+}
+.price-controls label {
+  display: inline-block;
+  margin-top:5px;
+
+  font-size: 14px;
+  line-height: 21px;
+  vertical-align: top;
+
+  cursor: pointer;
+}
+.price-controls .min-price,
+.price-controls .max-price {
+  width: 90px;
+  padding-left: 65px;
+}
+.price-controls input {
+  width: 50px;
+  margin: 0;
+
+  color: inherit;
+  font: inherit;
+
+  background: none;
+  border: none;
+}
+.range-controls {
+  position: relative;
+
+  margin-bottom: 32px;
+}
+.range-controls .scale {
+  height: 2px;
+
+  background: rgba(255, 255, 255, 0.3);
+}
+.range-controls .track {
+  width: 80%;
+  height: 2px;
+
+  background: #ffffff;
+}
+.thumb{
+    position: absolute;
+    top: -9px;
+    width: 4px;
+    height: 4px;
+  
+    background: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    cursor: pointer;
+}
+.thumb-min{
+    left:0;
+}
+.thumb-max{
+    left: 80%;
+}
+.thumb:hover {
+  background: #1c4f80;
+  border: 9px solid #ffffff;
+  }
+.button-show-options{
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color:transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.button-show-options:hover{
+    color: #000000;
+    border: 2px solid #ffffff;
+    
+    background-color: #ffffff;   
+}
+input[type=checkbox] {
+   opacity:0;
+}
+    input[type=checkbox]+label{
+      position:relative;
+      display:block;
+      margin:0;
+      margin-bottom:23px;
+      padding:0;
+      padding-left:40px;
+      cursor: pointer;
+      user-select: none;
+}
+input[type=checkbox]+label::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    display: block;
+    width: 21px;
+    height: 21px;
+    background-color:transparent;
+    border:2px solid #ffffff;
+}
+input:disabled+label::before{
+    border:2px solid rgba(255,255,255,0.3);
+}
+input[type="checkbox"]:checked+label::before{
+  border:none;
+  content: url("../img/checkbox-on.svg");
+}
+input[type="checkbox"]:focus + label::before {
+    outline: rgb(59, 153, 252) auto 5px;
+}
+
+.sort{
+    display: flex;
+   justify-content: flex-start;
+}
+.sort-pointers{
+  margin-top:30px;
+  margin-right: 70px;
+  margin-left:auto;
+}
+.sort-count b{
+display:block;
+margin-top:30px;
+margin-left:72px;
+margin-right:50px;
+margin-bottom: 32px;
+color: #000000;
+font-size: 21px;
+font-weight: 700;
+line-height: 26px;
+text-transform: uppercase;
+}
+.sort-options-name{
+  margin-right:30px;
+}
+.sort-options{
+  display:flex;
+  margin-top:22px;
+}
+.sort-options p{
+
+color: #000000;
+font-size: 12px;
+font-weight: 400;
+line-height: 18px;
+}
+ 
+.sort-options a{
+display:inline-block;
+margin-right:25px;
+opacity: 0.3;
+color: #000000;
+font-size: 12px;
+font-weight: 400;
+line-height: 18px;
+text-decoration:underline;
+text-decoration-style: dotted;
+}
+.sort-options a:hover,
+.sort-options a:focus{
+color: #81b3d2;
+}
+.sort-options a:active{
+color: #000000;
+opacity:100%;
+text-decoration: none;
+}
+.sort-options .option-current{
+color: #81b3d2;
+text-decoration: none;
+}
+  
+.sort-pointer{
+    fill:#cacaca;
+}
+.sort-pointer-link:hover path,
+.sort-pointer-link:focus path
+{
+    fill:black;
+}
+.sort-pointer-link:active path{
+    fill: #81b3d2;
+}
+/*------------------------------------RESULTS----------------------*/
+.results{
+    display:block;
+    width:100%;
+    margin:0;
+    padding:0;
+}  
+.search-items-list{
+  margin:0;
+  padding:0;
+  list-style:none;
+  display:flex;
+  justify-content: space-between;
+  flex-direction:column;
+  flex-basis:540px;/*____________________________________*/
+}
+.search-item{
+  display:flex;
+  justify-content: space-between;
+  border-top:1px solid #f2f2f2;
+  border-bottom:1px solid #f2f2f2;
+}
+.search-item:nth-child(1),
+.search-item:nth-child(2){
+    margin-bottom:-1px;
+}
+.item-description{
+    display:flex;
+    margin-top:30px;
+    margin-bottom:30px;
+    margin-left:73px;
+}
+.item-foto {
+  margin:0;
+  margin-right:30px;
+  width: 135px;
+  height: 90px;
+}
+.item-rating{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 110px;
+  margin-top:30px;
+  margin-bottom:30px;
+  margin-right:73px;
+  margin-left:auto;
+}
+.item-rating-stars-first{
+  align-self: flex-end;
+ 
+  width: 76px;
+  height:17px;
+ 
+  background-image:url("../img/star.svg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+}
+.item-rating-stars-second{
+  align-self: flex-end;
+ 
+  width: 56px;
+  height:17px;
+  background-image:url("../img/star.svg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+}
+.item-rating-stars-third{
+  align-self: flex-end;
+ 
+  width: 38px;
+  height:17px;
+  background-image:url("../img/star.svg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+}
+.rating{
+    margin:0;
+    margin-top:auto;
+    width: 110px;
+    height: 27px;
+    background-color: #f2f2f2;
+}
+.rating span{
+ display:block;
+ margin:0;
+ padding:3px 15px;
+ color: #666666;
+ font-family: "PT Sans";
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 21px;
+ text-transform: uppercase;
+}
+.item-options{
+margin:0;
+padding:0;
+
+min-width:256px;
+display:flex;
+flex-direction: column;
+justify-content: space-around;
+
+}
+.item-name,
+.item-class,
+.item-details{
+  flex:1;
+  margin:0;
+  padding:0;
+}
+.item-name a{
+  display:block;
+  align-self:flex-start;  
+  margin:0;
+  padding:0;
+
+  text-decoration: none;
+  color: #000000;
+  font-family: "PT Sans";
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+ 
+}
+.item-name a:hover,
+.item-name a:focus
+{
+  color: #81b3d2;
+ }
+ .item-name a:active{
+     color: #000000;
+     opacity:50%;
+}
+.item-class span{
+display:inline-block;
+margin:0;
+
+vertical-align: middle;
+
+padding:0;
+color: #333333;
+font-size: 14px;
+font-weight: 400;
+line-height: 21px;
+text-transform: uppercase;
+}
+.hotel-class span{
+ margin-right:31px;
+}
+.motel-class span{
+ margin-right:61px;
+}
+.apartment-class span{
+ margin-right:15px;
+}
+.item-details a{
+  display: inline-block;
+  vertical-align: middle;
+  margin:0;
+  margin-right:8px;
+  padding:3px 8px;
+}
+   
+.button:active{
+color:#ffffff;
+opacity:50%;
+}
+.button-more-info{
+    background-color: #81b3d2;
+}
+.button-more-info:hover,
+.button-more-info:focus
+{
+    background-color: #669ec0;
+}
+.button-more-info:active{
+    background-color: #5496bd;
+}
+.button-book-it{
+    background-color: #766357;
+}
+.button-book-it:hover,
+.button-book-it:hover:focus{
+    background-color: #604e43;
+}
+.button-book-it:active{
+    color:#ffffff;
+    opacity:50%;
+
+    background-color: #503e33;
+}
+
+/*-------------------------MODAL----------------------------------*/
+   .hotel-search-form-modal{
+    display:block;
+    position:absolute;
+    
+    top:0;
+    right:50%;
+    left:50%;
+    margin-left:-283px;
+    
+    padding:55px;
+    
+     width: 568px;
+     min-height: 395px;
+     background-color:#ffffff;
+     box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+     box-sizing:border-box;
+     color: #000000;
+     font-family: "PT Sans";
+     font-size: 14px;
+     font-weight: 700;
+     line-height: 26px;
+     text-transform: uppercase;
+}
+.hotel-search-form p{
+    position:relative;
+    margin:0;
+    margin-bottom:30px;
+}
+  
+.date-input,
+.guests-input{
+    font:inherit;
+    color: #000000;
+    text-transform: uppercase;
+    box-shadow:0;
+}
+.date-input{
+    width: 346px;
+    box-sizing:border-box;
+    padding:10px 15px;
+    padding-right:40px;
+    
+    background-color: #f2f2f2;
+}
+.guests-input{
+    margin:0;
+    width: 38px;
+    height:38px;
+    box-sizing:border-box;
+    padding:14px 16px;
+
+    background-color: #f2f2f2;
+}
+.hotel-search-form input:hover{
+    background-color: #ebebeb;
+  }
+  .hotel-search-form input:focus{
+    border: 2px solid #e5e5e5;
+    background-color: #ffffff;
+  }
+  .hotel-search-form label{
+    color: #000000;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 26px;
+  }
+  .hotel-search-form label{
+    display:inline-block;
+    vertical-align: middle;
+    margin-right:10px;
+  }
+  .label-guests{
+    display:inline-block;
+    vertical-align: middle;
+  }
+  .label-guests:first-child{
+    margin-right:30px;
+  
+  }
+  .label-guests:nth-of-type(2){
+    margin-right:30px;
+    margin-left:30px;
+  
+  }
+.icon-calendar{
+    position:absolute;
+    top:8px;
+    right:20px;
+    stroke: #cacaca;
+}
+.icon-calendar:hover path,
+.icon-calendar:focus path{
+    stroke: #231f20;
+}
+.icon-calendar:active path{
+    stroke:  #81b3d2;
+}
+.reduce,
+.enlarge{
+    margin:0;
+    width: 38px;
+    height: 38px;
+    color:#cacaca;
+    font-size:25px;
+
+    background-color: #f2f2f2;
+}
+.reduce:hover,
+.enlarge:hover,
+.reduce:focus,
+.enlarge:focus
+  {
+    color:black;
+  }
+.reduce:active,
+.enlarge:active{
+    color: #81b3d2;
+}
+.button-to-find{
+    margin-top:26px;
+    width: 458px;
+    height: 58px;
+    color:#ffffff;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    text-align:center;
+    text-transform: uppercase;
+
+    background-color: #81b3d2;
+  }
+  
+  .button-to-find:hover{
+    background-color: #669ec0;
+  }
+  .button-to-find:active{
+    background-color: #5496bd;
+    color:#ffffff;
+    opacity:50%;
+ }
 /*-------------------------FOOTER---------------------------------*/
 .page-footer{
     width:100%;
@@ -154,6 +908,12 @@ a {
     min-height:120px;
    
     background-color: rgba(255,255,255,0.9);
+}
+.main-page-footer{
+    margin-top:-120px;
+    opacity: 0.9;
+    z-index: 20;
+    
 }
 .container-columns{
     display:flex;
@@ -205,9 +965,16 @@ a {
 }
 .copyright{
     margin:auto;
-    align-self:center;
+    margin-top:18px;/*_________________*/
    
 }
+.copyright:hover path,
+  .copyright:focus path{
+    stroke: #81b3d2;
+}
+  .copyright:active path{
+    stroke: #bdbbbc;
+  }
 .copyright a{
     display:inline-block;
     vertical-align: middle;
