--- a/css/styles.css
+++ b/css/styles.css
@@ -883,6 +883,7 @@ body{
      position:relative;
      margin:0;
      margin-bottom:30px;
+
  }
    
  .date-input,
@@ -897,12 +898,16 @@ body{
      width: 346px;
      -webkit-box-sizing:border-box;
              box-sizing:border-box;
-     padding:6px 8px;
+     padding:7px 9px;
      padding-right:40px;
      
      background-color: #f2f2f2;
+     border:none;
+     box-shadow: none;
  }
  .guests-input{
+     display:inline-block;
+     vertical-align: middle;
      margin:0;
      width: 38px;
      height:38px;
@@ -912,6 +917,8 @@ body{
      text-align: center;
  
      background-color: #f2f2f2;
+     border:none;
+     box-shadow: none;
  }
  .hotel-search-form input:hover{
      background-color: #ebebeb;
@@ -936,7 +943,7 @@ body{
      vertical-align: middle;
    }
    .label-guests:first-child{
-     margin-right:30px;
+     margin-right:46px;
    
    }
    .label-guests:nth-of-type(2){
@@ -946,7 +953,7 @@ body{
    }
  .icon-calendar{
      position:absolute;
-     top:25%;
+     top:20%;
      right:20px;
      stroke: #cacaca;
  }
@@ -959,6 +966,8 @@ body{
  }
  .reduce,
  .enlarge{
+     display:inline-block;
+     vertical-align: middle;
      margin:0;
      width: 38px;
      height: 38px;
@@ -966,6 +975,14 @@ body{
      font-size:25px;
  
      background-color: #f2f2f2;
+     border:none;
+     box-shadow: none;
+ }
+ .reduce{
+    margin-right:-4px;
+ }
+ .enlarge{
+    margin-left:-3px;
  }
  .reduce:hover,
  .enlarge:hover,
